IImplementa output de valores do build

--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -1,6 +1,17 @@
 name: Build Docker Image
 description: "Build a Docker image"
 
+outputs:
+  repo-name:
+    description: "Name of repository"
+    value: ${steps.build-info.outputs.REPO_NAME}
+  version:
+    description: "Version"
+    value: ${steps.build-info.outputs.VERSION}
+  image-name:
+    description: "Name of repository"
+    value: ${steps.build-info.outputs.IMAGE_NAME}
+
 runs:
   using: "composite"
   steps:
