--- a/.github/actions/ecr-push/action.yml
+++ b/.github/actions/ecr-push/action.yml
@@ -45,7 +45,7 @@ runs:
     - name: "Push Docker Image to ECR"
       shell: bash
       env:
-        ECR_URI=${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com
+        ECR_URI=${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com
       run: |
         docker tag ${{ inputs.repository-name }}:${{ inputs.image-tag }} $ECR_URI/${{ inputs.repository-name }}:${{ inputs.image-tag }}
         docker push --all-tags $ECR_URI/${{ inputs.repository-name }}:${{ inputs.image-tag }}
