--- a/.github/actions/ecr-push/action.yml
+++ b/.github/actions/ecr-push/action.yml
@@ -44,8 +44,7 @@ runs:
 
     - name: "Push Docker Image to ECR"
       shell: bash
-      env:
-        ECR_URI=${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com
       run: |
+        ECR_URI="${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com"
         docker tag ${{ inputs.repository-name }}:${{ inputs.image-tag }} $ECR_URI/${{ inputs.repository-name }}:${{ inputs.image-tag }}
         docker push --all-tags $ECR_URI/${{ inputs.repository-name }}:${{ inputs.image-tag }}
