--- a/.github/actions/ecr-push/action.yml
+++ b/.github/actions/ecr-push/action.yml
@@ -46,5 +46,5 @@ runs:
       shell: bash
       run: |
         ECR_URI="${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.repository-name }}"
-        docker tag ${{ inputs.repository-name }}:${{ github.event.inputs.branch }} $ECR_URI/:${{ inputs.image-tag }}
+        docker tag ${{ inputs.repository-name }}:${{ github.event.inputs.branch }} $ECR_URI:${{ inputs.image-tag }}
         docker push --all-tags $ECR_URI
