--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -19,6 +19,7 @@ runs:
       shell: bash
       run: |
         echo "REPO_NAME=$(echo '${{ github.repository }}' | awk -F'/' '{print $2}')" >> $GITHUB_ENV
+        IMAGE_NAME=$REPO_NAME:${{ github.ref_name }}
         echo "IMAGE_NAME=$REPO_NAME:${{ github.ref_name }}" >> $GITHUB_OUTPUT
         echo "Building image:$IMAGE_NAME"
         docker build --platform linux/amd64 -t "/$IMAGE_NAME" .
