--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -18,7 +18,7 @@ runs:
       id: build
       shell: bash
       run: |
-        REPO_NAME=$(echo '${{ github.repository }}' | awk -F'/' '{print $2}')"      
+        REPO_NAME=$(echo '${{ github.repository }}' | awk -F'/' '{print $2}')
         IMAGE_NAME=$REPO_NAME:${{ github.ref_name }}
         echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_OUTPUT
         echo "Building image:$IMAGE_NAME"
