--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -22,4 +22,4 @@ runs:
         IMAGE_NAME=$REPO_NAME:${{ github.ref_name }}
         echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_OUTPUT
         echo "Building image:$IMAGE_NAME"
-        docker build --platform linux/amd64 -t /$IMAGE_NAME .
+        docker build --platform linux/amd64 -t $IMAGE_NAME .
