--- a/.github/actions/ecr-push/action.yml
+++ b/.github/actions/ecr-push/action.yml
@@ -3,10 +3,10 @@ description: "Push a Docker images to Amazon ECR"
 inputs:
   aws-access-key-id:
     description: "AWS Access Key ID"
-    required: true
+    required: false
   aws-secret-access-key:
     description: "AWS Secret Access Key"
-    required: true
+    required: false
   aws-session-token:
     description: "AWS temporary token"
     required: false
@@ -31,8 +31,8 @@ runs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        aws-access-key-id: ${{ inputs.aws-access-key-id }}
-        aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
+        #aws-access-key-id: ${{ inputs.aws-access-key-id }}
+        #aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
         aws-session-token: ${{ inputs.aws-session-token }}
         aws-region: ${{ inputs.aws-region }}
 
