--- a/.github/actions/ecr-push/action.yml
+++ b/.github/actions/ecr-push/action.yml
@@ -3,21 +3,22 @@ description: "Push a Docker images to Amazon ECR"
 inputs:
   aws-access-key-id:
     description: "AWS Access Key ID"
-    required: false
+    required: true
   aws-secret-access-key:
     description: "AWS Secret Access Key"
-    required: false
+    required: true
   aws-session-token:
     description: "AWS temporary token"
     required: false
+    default: ""
   aws-account:
     description: "AWS Account"
     required: true    
   aws-region:
     description: "AWS Region"
     required: true
-  repository-name:
-    description: "ECR Repository Name"
+  image-name:
+    description: "ECR Image ( and Repository ) Name"
     required: true
   image-tag:
     description: "Tag for the Docker image"
@@ -31,8 +32,8 @@ runs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        #aws-access-key-id: ${{ inputs.aws-access-key-id }}
-        #aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
+        aws-access-key-id: ${{ inputs.aws-access-key-id }}
+        aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
         aws-session-token: ${{ inputs.aws-session-token }}
         aws-region: ${{ inputs.aws-region }}
 
