--- a/.github/actions/ecr-push/action.yml
+++ b/.github/actions/ecr-push/action.yml
@@ -46,6 +46,6 @@ runs:
     - name: "Push Docker Image to ECR"
       shell: bash
       run: |
-        ECR_URI="${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.repository-name }}"
-        docker tag ${{ inputs.repository-name }}:${{ github.event.inputs.branch }} $ECR_URI:${{ inputs.image-tag }}
+        ECR_URI="${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.image-name }}"
+        docker tag $ECR_URI $ECR_URI:${{ inputs.image-tag }}
         docker push --all-tags $ECR_URI
