--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -5,9 +5,9 @@ outputs:
   image-name:
     description: "Name of image"
     value: ${{ steps.build.outputs.IMAGE_NAME }}
-  tag:
+  image-tag:
     description: "Tag with version of branch used to build image "
-    value: ${{ github.ref_name }}
+    value: ${{ steps.build.outputs.IMAGE_TAG }}
 
 runs:
   using: "composite"
@@ -22,8 +22,8 @@ runs:
       shell: bash
       run: |
         IMAGE_NAME=$(echo '${{ github.repository }}' | awk -F'/' '{print $2}')
-        TAG=${{ github.ref_name }}
+        IMAGE_TAG=${{ github.ref_name }}
         echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_OUTPUT
-        echo "TAG=${{ github.ref_name }}" >> $GITHUB_OUTPUT
-        echo "Building image:$IMAGE_NAME:$TAG"
-        docker build --platform linux/amd64 -t $IMAGE_NAME:$TAG .
+        echo "IMAGE_TAG=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+        echo "Building image:$IMAGE_NAME:$IMAGE_TAG"
+        docker build --platform linux/amd64 -t $IMAGE_NAME:$IMAGE_TAG .
