--- a/.github/actions/ecr-push/action.yml
+++ b/.github/actions/ecr-push/action.yml
@@ -47,5 +47,6 @@ runs:
       shell: bash
       run: |
         ECR_URI="${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.image-name }}"
+        docker tag ${{ inputs.image-name }}:${{ inputs.image-tag }} $ECR_URI:${{ inputs.image-tag }}
         docker tag ${{ inputs.image-name }}:${{ inputs.image-tag }} $ECR_URI:${{ github.sha }}
         docker push --all-tags $ECR_URI
