--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -27,3 +27,4 @@ runs:
         echo "IMAGE_TAG=${{ github.ref_name }}" >> $GITHUB_OUTPUT
         echo "Building image:$IMAGE_NAME:$IMAGE_TAG"
         docker build --platform linux/amd64 -t $IMAGE_NAME:$IMAGE_TAG .
+        docker images
