--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -12,6 +12,21 @@ outputs:
 runs:
   using: "composite"
   steps:
+    - name: Config Docker image cache
+      uses: actions/cache@v3
+      with:
+        path: /tmp/docker-cache
+        key: ${{ runner.os }}-docker-alpine
+        restore-keys: |
+          ${{ runner.os }}-docker-
+    
+    - name: Pull Alpine base image
+      shell: bash
+      run: |
+        mkdir -p /tmp/docker-cache
+        docker load < /tmp/docker-cache/alpine.tar || docker pull alpine:3.19.4
+        docker save alpine:3.19.4 > /tmp/docker-cache/alpine.tar
+    
     - name: Checkout code
       uses: actions/checkout@v4
       with:
@@ -26,5 +41,5 @@ runs:
         echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_OUTPUT
         echo "IMAGE_TAG=${{ github.ref_name }}" >> $GITHUB_OUTPUT
         echo "Building image:$IMAGE_NAME:$IMAGE_TAG"
-        docker build --platform linux/amd64 -t $IMAGE_NAME:$IMAGE_TAG .
+        docker build --cache-from=type=local,src=/tmp/docker-cache --platform linux/amd64 -t $IMAGE_NAME:$IMAGE_TAG .
         docker images
