--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -12,6 +12,13 @@ outputs:
 runs:
   using: "composite"
   steps:
+
+    - name: Check Docker cache directory
+      shell: bash
+      run: |
+        ls -l /tmp/docker-cache
+        cat /tmp/docker-cache/index.json || echo "index.json not found"
+
     - name: Config Docker image cache
       uses: actions/cache@v3
       with:
@@ -41,5 +48,7 @@ runs:
         echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_OUTPUT
         echo "IMAGE_TAG=${{ github.ref_name }}" >> $GITHUB_OUTPUT
         echo "Building image:$IMAGE_NAME:$IMAGE_TAG"
-        docker build --cache-from=type=local,src=/tmp/docker-cache --platform linux/amd64 -t $IMAGE_NAME:$IMAGE_TAG .
+        docker build --cache-from=type=local,src=/tmp/docker-cache \
+                     --cache-from=type=local,src=/tmp/docker-cache
+                     --platform linux/amd64 -t $IMAGE_NAME:$IMAGE_TAG .
         docker images
