--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -21,19 +21,6 @@ runs:
         restore-keys: |
           ${{ runner.os }}-docker-
     
-    - name: Pull Alpine base image
-      shell: bash
-      run: |
-        mkdir -p /tmp/docker-cache
-        docker build \
-          --cache-from=type=local,src=/tmp/docker-cache \
-          --cache-to=type=local,dest=/tmp/docker-cache \
-          --build-arg BASE_IMAGE=alpine:3.19.4 \
-          -<<EOF
-        FROM alpine:3.19.4 AS base
-        RUN echo "Setting up cache"
-        EOF
-    
     - name: Checkout code
       uses: actions/checkout@v4
       with:
@@ -48,7 +35,7 @@ runs:
         echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_OUTPUT
         echo "IMAGE_TAG=${{ github.ref_name }}" >> $GITHUB_OUTPUT
         echo "Building image:$IMAGE_NAME:$IMAGE_TAG"
-        docker build --cache-from=type=local,src=/tmp/docker-cache \
+        docker build --cache-to=type=local,src=/tmp/docker-cache \
                      --cache-from=type=local,src=/tmp/docker-cache
                      --platform linux/amd64 -t $IMAGE_NAME:$IMAGE_TAG .
         docker images
