--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -13,6 +13,11 @@ runs:
   using: "composite"
   steps:
 
+    - name: Enable BuildKit
+      shell: bash
+      run: |
+        export DOCKER_BUILDKIT=1
+
     - name: Config Docker image cache
       uses: actions/cache@v3
       with:
@@ -34,6 +39,7 @@ runs:
         IMAGE_TAG=${{ github.ref_name }}
         echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_OUTPUT
         echo "IMAGE_TAG=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+        export DOCKER_BUILDKIT=1
         echo "Building image:$IMAGE_NAME:$IMAGE_TAG"
         docker build --cache-to=type=local,src=/tmp/docker-cache \
                      --cache-from=type=local,src=/tmp/docker-cache \
