--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -27,7 +27,5 @@ runs:
         echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_OUTPUT
         echo "IMAGE_TAG=${{ github.ref_name }}" >> $GITHUB_OUTPUT
         echo "Building image:$IMAGE_NAME:$IMAGE_TAG"
-        docker build --cache-to=type=local,src=/tmp/docker-cache \
-                     --cache-from=type=local,src=/tmp/docker-cache \
-                     --platform linux/amd64 -t $IMAGE_NAME:$IMAGE_TAG .
+        docker build --platform linux/amd64 -t $IMAGE_NAME:$IMAGE_TAG .
         docker images
