--- a/.github/actions/ecs-deploy/action.yml
+++ b/.github/actions/ecs-deploy/action.yml
@@ -63,7 +63,7 @@ runs:
       shell: bash
       run: |
         ECR_URI="${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.image-name }}"
-        docker tag ${{ inputs.image-name }}:${{ inputs.image-tag }} $ECR_URI:${{ inputs.environment-tag }}
+        docker tag $ECR_URI:${{ inputs.image-tag }} $ECR_URI:${{ inputs.environment-tag }}
         docker push --all-tags $ECR_URI
 
     # - name: Fill in the new image ID in the Amazon ECS task definition
