--- a/.github/actions/ecs-deploy/action.yml
+++ b/.github/actions/ecs-deploy/action.yml
@@ -66,13 +66,25 @@ runs:
         docker tag $ECR_URI:${{ inputs.image-tag }} $ECR_URI:${{ inputs.environment-tag }}
         docker push --all-tags $ECR_URI
 
-    # - name: Fill in the new image ID in the Amazon ECS task definition
-    #   id: task-definition
-    #   uses: aws-actions/amazon-ecs-render-task-definition@v1
-    #   with:
-    #     task-definition: task-definition.json
-    #     container-name: my-container
-    #     image: ${{ inputs.image-name }}:${{ inputs.image-tag }}
+    - name: Fill in the new image ID in the Amazon ECS task definition
+      id: task-definition
+      uses: aws-actions/amazon-ecs-render-task-definition@v2
+      with:
+        task-definition: task-definition.json
+        container-name: ${{ inputs.image-name }}
+        image: "${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.image-name }}:${{ inputs.image-tag }}"
+        environment-variables: |
+            LOG_LEVEL=info
+            ENVIRONMENT=prd
+            AWS_DEFAULT_REGION=${{ inputs.aws-region }
+        taskRoleArn: "arn:aws:iam::572711339557:role/Jiralert-Service"
+        executionRoleArn: "arn:aws:iam::572711339557:role/ecsTaskExecutionRole"
+        log-configuration-log-driver: awslogs
+        log-configuration-options: |
+          awslogs-create-group=true
+          awslogs-stream-prefix=ecs
+          awslogs-group=/ecs/${{ inputs.image-name }}
+          awslogs-region=${{ inputs.aws-region }}
 
     - name: Deploy to ECS
       id: deploy
@@ -81,7 +93,8 @@ runs:
       with:
         cluster: ${{ inputs.aws-ecs-cluster }}
         service: ${{ inputs.aws-ecs-service }}
-        task-definition: ${{ inputs.aws-ecs-task-definition }}
+        #task-definition: ${{ inputs.aws-ecs-task-definition }}
+        task-definition: ${{ steps.task-definition.outputs.task-definition }}
         wait-for-service-stability: false
 
     - name: Verify Deployment Status 
