--- a/.github/actions/ecs-deploy/action.yml
+++ b/.github/actions/ecs-deploy/action.yml
@@ -89,7 +89,7 @@ runs:
     - name: check
       shell: bash
       run: | 
-        echo "cat ${{ steps.render-task.outputs.task-definition }}"
+        cat ${{ steps.render-task.outputs.task-definition }}
 
     # - name: Deploy to ECS
     #   id: deploy
