--- a/.github/actions/ecs-deploy/action.yml
+++ b/.github/actions/ecs-deploy/action.yml
@@ -83,12 +83,12 @@ runs:
             -e "s|\$container_name|${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.image-name }}:${{ inputs.image-tag }}|g" \
             -e "s|\$task_role_arn|$TASK_ROLE_ARN|g" \
             -e "s|\$execution_role_arn|$EXECUTION_ROLE_ARN|g" \
-            ${{ steps.render-task.outputs.task-definition }} > ${{ steps.render-task.outputs.task-definition }}
+            ${{ github.action_path }}/task-definition.json > task-definition.json
 
     - name: check
       shell: bash
       run: | 
-        cat ${{ steps.render-task.outputs.task-definition }}
+        cat task-definition.json
 
     # - name: Deploy to ECS
     #   id: deploy
