--- a/.github/actions/ecs-deploy/action.yml
+++ b/.github/actions/ecs-deploy/action.yml
@@ -81,9 +81,9 @@ runs:
       run: |
         sed -e "s|\$environment|${{ inputs.environment }}|g" \            
             -e "s|\$container_name|${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.image-name }}:${{ inputs.image-tag }}|g" \
-            -e "s|\$task_role_arn|$TASK_ROLE_ARN|g" \
-            -e "s|\$execution_role_arn|$EXECUTION_ROLE_ARN|g" \
-            task-definition.json > task-definition2.json
+            -e "s|\$task_role_arn|${{ inputs.task-role-arn }}|g" \ 
+            -e "s|\$execution_role_arn|${{ inputs.execution-role-arn }}|g" \
+            ${{ github.action_path }}/task-definition.json > task-definition.json
 
     - name: check
       shell: bash
