--- a/.github/actions/ecs-deploy/action.yml
+++ b/.github/actions/ecs-deploy/action.yml
@@ -51,43 +51,50 @@ runs:
   using: "composite"
 
   steps:
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ inputs.aws-access-key-id }}
-        aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
-        aws-session-token: ${{ inputs.aws-session-token }}
-        aws-region: ${{ inputs.aws-region }}
+    # - name: Configure AWS credentials
+    #   uses: aws-actions/configure-aws-credentials@v4
+    #   with:
+    #     aws-access-key-id: ${{ inputs.aws-access-key-id }}
+    #     aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
+    #     aws-session-token: ${{ inputs.aws-session-token }}
+    #     aws-region: ${{ inputs.aws-region }}
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v2
+    # - name: Login to Amazon ECR
+    #   id: login-ecr
+    #   uses: aws-actions/amazon-ecr-login@v2
 
-    - name: Pull the image from ECR
+    # - name: Pull the image from ECR
+    #   shell: bash
+    #   run: |
+    #     docker pull ${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.image-name }}:${{ inputs.image-tag }}
+
+    # - name: "Push Retagged Docker Image to ECR"
+    #   shell: bash
+    #   run: |
+    #     ECR_URI="${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.image-name }}"
+    #     docker tag $ECR_URI:${{ inputs.image-tag }} $ECR_URI:${{ inputs.environment-tag }}
+    #     docker push --all-tags $ECR_URI
+
+    - name: check1
       shell: bash
       run: |
-        docker pull ${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.image-name }}:${{ inputs.image-tag }}
-
-    - name: "Push Retagged Docker Image to ECR"
-      shell: bash
-      run: |
-        ECR_URI="${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.image-name }}"
-        docker tag $ECR_URI:${{ inputs.image-tag }} $ECR_URI:${{ inputs.environment-tag }}
-        docker push --all-tags $ECR_URI
+        cat /home/runner/work/_actions/rogerluizpereira/shared-actions/master/.github/actions/ecs-deploy/task-definition.json 
 
     - name: Gerenerate task-defitition from template
       # The action amazon-ecs-render-task-definition@v1, don't support all properties needed 
       shell: bash
       run: |
-        sed -e "s|\$environment|${{ inputs.environment }}|g" \            
-            -e "s|\$container_name|${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.image-name }}:${{ inputs.image-tag }}|g" \
-            -e "s|\$task_role_arn|${{ inputs.task-role-arn }}|g" \ 
+        sed -e "s|\$environment|${{ inputs.environment }}|g" \
+            -e "s|\$container_name|${{ inputs.image-name }}|g" \
+            -e "s|\$image_name|${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.image-name }}:${{ inputs.image-tag }}|g" \
+            -e "s|\$task_role_arn|${{ inputs.task-role-arn }}|g" \
             -e "s|\$execution_role_arn|${{ inputs.execution-role-arn }}|g" \
             ${{ github.action_path }}/task-definition.json > task-definition.json
 
     - name: check
       shell: bash
-      run: | 
+      run: |
+        cat /home/runner/work/_actions/rogerluizpereira/shared-actions/master/.github/actions/ecs-deploy/task-definition.json 
         cat task-definition.json
 
     # - name: Deploy to ECS
