--- a/.github/actions/ecs-deploy/action.yml
+++ b/.github/actions/ecs-deploy/action.yml
@@ -51,18 +51,10 @@ runs:
       run: |
         docker pull ${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.aws-ecs-service }}:${{ inputs.version }}
 
-    - name: "Push Retagged Docker Image to ECR"
-      shell: bash
-      run: |
-        ECR_URI="${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.aws-ecs-service }}"
-        docker tag $ECR_URI:${{ inputs.version }} $ECR_URI:${{ inputs.environment }}
-        docker push --all-tags $ECR_URI
-
     - name: Gerenerate task-definition from template
       # The action amazon-ecs-render-task-definition@v1, don't support all properties needed 
       shell: bash
       run: |
-      
         sed -e "s|\$environment|${{ inputs.environment }}|g" \
             -e "s|\$service_name|${{ inputs.aws-ecs-service }}|g" \
             -e "s|\$image_name|${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.aws-ecs-service }}:${{ inputs.version }}|g" \
@@ -71,48 +63,47 @@ runs:
             -e "s|\$region|${{ inputs.aws-region }}|g" \
             ${{ github.action_path }}/task-definition.json > task-definition.json
 
-    - name: check
+    - name: Deploy to ECS
+      id: deploy
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v2
+      with:
+        cluster: ${{ inputs.aws-ecs-cluster }}
+        service: ${{ inputs.aws-ecs-service }}
+        task-definition: task-definition.json
+        wait-for-service-stability: false
+
+    - name: Verify Deployment Status 
       shell: bash
       run: |
-        cat task-definition.json
+        TIMEOUT=1200  # Tempo máximo de espera em segundos
+        INTERVAL=10  # Intervalo entre as verificações, em segundos
+        ELAPSED=0
+        echo "Starting deployment status check for service: ${{ inputs.aws-ecs-service }} in cluster: ${{ inputs.aws-ecs-cluster }} task-definition: ${{ steps.deploy.outputs.task-definition-arn }}"
+        while [ $ELAPSED -lt $TIMEOUT ]; do
+          STATUS=$(aws ecs describe-services \
+                    --cluster ${{ inputs.aws-ecs-cluster }} \
+                    --services ${{ inputs.aws-ecs-service }} \
+                    --query 'services[0].deployments[?taskDefinition==`${{ steps.deploy.outputs.task-definition-arn }}`].rolloutState' \
+                    --output text)
+          echo "$(date '+%H:%M:%S') - Current rollout state: $STATUS"
+          # Verificar os estados finais
+          if [ "$STATUS" == "COMPLETED" ]; then
+            echo "Deployment succeeded!"
+            exit 0
+          elif [ "$STATUS" == "FAILED" ] || [ "$STATUS" == "ROLLED_BACK" ]; then
+            echo "Deployment failed or rolled back. Rollout state: $STATUS"
+            exit 1
+          fi
+          # Aguardar o próximo ciclo de verificação
+          sleep $INTERVAL
+          ELAPSED=$((ELAPSED + INTERVAL))
+        done
+        echo "Deployment status check timed out after $TIMEOUT seconds."
+        exit 1
 
-    # - name: Deploy to ECS
-    #   id: deploy
-    #   #if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
-    #   uses: aws-actions/amazon-ecs-deploy-task-definition@v2
-    #   with:
-    #     cluster: ${{ inputs.aws-ecs-cluster }}
-    #     service: ${{ inputs.aws-ecs-service }}
-    #     #task-definition: ${{ inputs.aws-ecs-task-definition }}
-    #     task-definition: ${{ steps.render-task.outputs.task-definition }}
-    #     wait-for-service-stability: false
-
-    # - name: Verify Deployment Status 
-    #   shell: bash
-    #   run: |
-    #     TIMEOUT=1200  # Tempo máximo de espera em segundos
-    #     INTERVAL=10  # Intervalo entre as verificações, em segundos
-    #     ELAPSED=0
-    #     echo "Starting deployment status check for service: ${{ inputs.aws-ecs-service }} in cluster: ${{ inputs.aws-ecs-cluster }} task-definition: ${{ steps.deploy.outputs.task-definition-arn }}"
-    #     while [ $ELAPSED -lt $TIMEOUT ]; do
-    #       # Obter status da implantação principal
-    #       STATUS=$(aws ecs describe-services \
-    #                 --cluster ${{ inputs.aws-ecs-cluster }} \
-    #                 --services ${{ inputs.aws-ecs-service }} \
-    #                 --query 'services[0].deployments[?taskDefinition==`${{ steps.deploy.outputs.task-definition-arn }}`].rolloutState' \
-    #                 --output text)
-    #       echo "$(date '+%H:%M:%S') - Current rollout state: $STATUS"
-    #       # Verificar os estados finais
-    #       if [ "$STATUS" == "COMPLETED" ]; then
-    #         echo "Deployment succeeded!"
-    #         exit 0
-    #       elif [ "$STATUS" == "FAILED" ] || [ "$STATUS" == "ROLLED_BACK" ]; then
-    #         echo "Deployment failed or rolled back. Rollout state: $STATUS"
-    #         exit 1
-    #       fi
-    #       # Aguardar o próximo ciclo de verificação
-    #       sleep $INTERVAL
-    #       ELAPSED=$((ELAPSED + INTERVAL))
-    #     done
-    #     echo "Deployment status check timed out after $TIMEOUT seconds."
-    #     exit 1
+    - name: "Push Retagged Docker Image to ECR"
+      shell: bash
+      run: |
+        ECR_URI="${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.aws-ecs-service }}"
+        docker tag $ECR_URI:${{ inputs.version }} $ECR_URI:${{ inputs.environment }}
+        docker push --all-tags $ECR_URI
