--- a/.github/actions/ecs-deploy/action.yml
+++ b/.github/actions/ecs-deploy/action.yml
@@ -49,12 +49,14 @@ runs:
     - name: Pull the image from ECR
       shell: bash
       run: |
+        echo "Pulling image from ECR"
         docker pull ${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.aws-ecs-service }}:${{ inputs.version }}
 
     - name: Gerenerate task-definition from template
       # The action amazon-ecs-render-task-definition@v1, don't support all properties needed 
       shell: bash
       run: |
+        echo "Generating task definition"
         sed -e "s|\$environment|${{ inputs.environment }}|g" \
             -e "s|\$service_name|${{ inputs.aws-ecs-service }}|g" \
             -e "s|\$image_name|${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.aws-ecs-service }}:${{ inputs.version }}|g" \
@@ -75,6 +77,7 @@ runs:
     - name: Verify Deployment Status 
       shell: bash
       run: |
+        echo "Verifying Deployment Status"
         TIMEOUT=1200  # Tempo máximo de espera em segundos
         INTERVAL=10  # Intervalo entre as verificações, em segundos
         ELAPSED=0
@@ -104,6 +107,7 @@ runs:
     - name: "Push Retagged Docker Image to ECR"
       shell: bash
       run: |
+        echo "Retaging image on ECR with environment tag" 
         ECR_URI="${{ inputs.aws-account }}.dkr.ecr.${{ inputs.aws-region }}.amazonaws.com/${{ inputs.aws-ecs-service }}"
         docker tag $ECR_URI:${{ inputs.version }} $ECR_URI:${{ inputs.environment }}
         docker push --all-tags $ECR_URI
