--- a/.github/actions/ecs-deploy/action.yml
+++ b/.github/actions/ecs-deploy/action.yml
@@ -109,10 +109,11 @@ runs:
       shell: bash
       run: |
         echo "Updating task definition with optional properties"
+        echo '${{ inputs.environment_vars }}' > extra_env_vars.json
         jq \
-          --argjson environment_vars "${{ inputs.environment_vars }}" \
+          --slurpfile extra_env_vars extra_env_vars.json \
           '
-          | .containerDefinitions[0].environment += $environment_vars
+          | .containerDefinitions[0].environment += $extra_env_vars
           ' \
           task-definition-mandatory.json > task-definition.json
 
