--- a/.github/actions/ecs-deploy/action.yml
+++ b/.github/actions/ecs-deploy/action.yml
@@ -113,7 +113,8 @@ runs:
         jq \
           --slurpfile extra_env_vars extra_env_vars.json \
           '
-          | .containerDefinitions[0].environment += $extra_env_vars
+          .containerDefinitions[0].environment =
+            ((.containerDefinitions[0].environment // []) + $extra_env_vars[0])
           ' \
           task-definition-mandatory.json > task-definition.json
 
